# movies

./: .gitignore  Cargo.toml  Scripts.toml  build.rs
assets/js/: index.js  util.js
assets/style/: index.css
pages/: 404.html  index.html
src/: main.rs  routes.rs
src/db/: client.rs  crew.rs  episodes.rs  ingest.rs  mod.rs  movie.rs  names.rs  principals.rs  titles.rs
src/macros/: mod.rs  page.rs  res.rs  router.rs
src/routes/: api.rs  health_check.rs  mod.rs  pages.rs
templates/: index.html  movie.html
