[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
indicatif = "0.17"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws", "macros"] }
futures = "0.3.31"
headers = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
